--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ section.bottom {
 .progress {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
 } 
 .progressBox {
   height: 100px;
